added router link

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -17,7 +17,7 @@
             <div class="col-12">
               <button class="btn btn-primary" type="submit">Sign in</button>
             </div>
-            <div class="text-center" >Don't have an account?</div><a routerLink="/register-form">Sign Up</a>
+            <div class="text-center" >Don't have an account?</div><a routerLink="/register">Sign Up</a>
           </form>
         </div>
       </div>
