added sign in router link

--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -31,7 +31,7 @@
             <div class="col-12 mb-3">
               <button class="btn btn-primary" type="submit">Sign up</button>
             </div>
-            <p>Already a uniqueorn?</p><p>Please <a href="src/login-form" style="color:dodgerblue">Sign in</a>here</p>
+          <div class="text-center" >Already a uniqueorn?</div><a routerLink="/login">Sign In</a>
           </form>
         </div>
       </div>
