--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -8,7 +8,7 @@
           <form class="column">
             <div class="col-md-12 mb-3">
               <label for="validationDefault01" class="form-label">Username</label>
-              <input type="text" class="form-control" id="validationDefault01" required>
+              <input type="text" class="form-control" id="validationDefault01" formControlName="Username" required>
             </div>
             <div class="col-md-12 mb-3">
               <label for="validationDefault02" class="form-label">Password</label>
