--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -5,14 +5,14 @@
           <div class="card-body">
             <p class="card-text"> 
           </div>  
-          <form class="column">
+          <form class="column"  FormGroup="validation">
             <div class="col-md-12 mb-3">
               <label for="validationDefault01" class="form-label">Username</label>
               <input type="text" class="form-control" id="validationDefault01" formControlName="Username" required>
             </div>
             <div class="col-md-12 mb-3">
               <label for="validationDefault02" class="form-label">Password</label>
-              <input type="password" class="form-control" id="validationDefault02" required>
+              <input type="password" class="form-control" id="validationDefault02" formControlName="Password" required>
             </div>
             <div class="col-12">
               <button class="btn btn-primary" type="submit">Sign in</button>
