--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin-top: 70px;
     }
     
     .card{
@@ -15,7 +16,7 @@ body{
         box-shadow: 1.3rem 1.3rem 1.3rem rgba(0 0 0 0.5);
         border-color:rgba(115, 159, 241, 0.5) ;
         margin: 0 auto;
-        margin-bottom: 10px; 
+        margin-bottom: 10px;
     }
   
      .input:focus {
@@ -48,6 +49,7 @@ body{
      .card-body{
       margin-bottom: 18px;
       padding-top: auto 0 ;
+      margin-top: 50px;
      }
      
      .card-img-top{
@@ -59,7 +61,7 @@ body{
      
      .column{
       padding-bottom:5px;
-      margin-bottom:12px; 
+      margin-bottom:10px; 
       font-family:georgia,garamond,serif;
       border-color: #04011396;
      }
