--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,7 +1,7 @@
  <div class="container">
       <div class="row justify-content-center">
         <div class="card my-5 px-10 py-5 cb text-center" style="width: 24rem; height:42rem;">
-          <img class="card-img-top" src="assets/est22222.png" alt="Card image cap">
+          <img class="card-img-top" src="assets/logo.png" alt="Card image cap">
           <div class="card-body">
             <p class="card-text"> 
           </div>  
