--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row justify-content-center">
       <div class="card my-2 px-6 py-4 cb text-center" style="width: 24rem; height:52rem;">
-        <img class="card-img-top" src="assets/est22222.png" alt="Card image cap">
+        <img class="card-img-top" src="assets/logo.png" alt="Card image cap">
         <div class="card-body">
           <form class="column" [ngClass]="{'was-validated': wasValidated}" [formGroup]="registerForm">
             <div class="col-md-12 mb-3">
