--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 
 <a class="menu-toggle rounded" href="#">
-  <i class="fa fa-bars"></i>
+  <i class="fa fa-home"></i>
 </a>
 <nav id="sidebar-wrapper">
   <ul class="sidebar-nav">
@@ -30,7 +30,7 @@
 <!-- Header Starts -->
 <section id="Banner" class="content-section">
   <div class="logo">
-    <img src="/assets/logoo.png" alt="logo" />
+    <img src="/assets/logou.png" alt="logo" />
   </div>
   <div class="container content-wrap text-center">
     <h1>Uniqueorns Land</h1>
