--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 
 <a class="menu-toggle rounded" href="#">
-  <i class="fa fa-home"></i>
+  <i class="fa-solid fa-bars"></i>
 </a>
 <nav id="sidebar-wrapper">
   <ul class="sidebar-nav">
@@ -68,11 +68,11 @@
           <div class="service-icon yellow">
             <div class="front-content">
               <i class="fa fa-globe" aria-hidden="true"></i>
-              <h3>Family Travel</h3>
+              <h3>lorem ipsum</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>Family Travel</h3>
+            <h3>lorem ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -82,11 +82,11 @@
           <div class="service-icon orange">
             <div class="front-content">
               <i class="fa fa-suitcase"></i>
-              <h3>Business Travel</h3>
+              <h3>lorem ipsum</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>Business Travel</h3>
+            <h3>lorem ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -96,11 +96,11 @@
           <div class="service-icon red">
             <div class="front-content">
               <i class="fa fa-male" aria-hidden="true"></i>
-              <h3>Solo Travel</h3>
+              <h3>lorem ipsum</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>Solo Travel</h3>
+            <h3>lorem ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -110,11 +110,11 @@
           <div class="service-icon grey">
             <div class="front-content">
               <i class="fa fa-users"></i>
-              <h3>Camping</h3>
+              <h3>lorem ipsum</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>Camping</h3>
+            <h3>lorem ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
