--- a/src/assets/styles/custom-responsive-styles.css
+++ b/src/assets/styles/custom-responsive-styles.css
@@ -176,6 +176,7 @@
 
 #Banner .btn-primary,footer.footer .social-link ,#customers-testimonials .testimonial-name,#Contact .submit-btn button{
   background-color: #b584ee !important;
+  font-family: sans-serif;
 }
 
 #Banner {
@@ -184,15 +185,33 @@
   background: linear-gradient(274deg, hsl(183deg 30% 70%), hsl(240deg 30% 80%) 44%, hsl(281deg 35% 80%));
   color: #fff;
 }
-.menu-toggle {
+.menu-toggle{
   position: fixed;
   right: 15px;
   top: 15px;
   width: 50px;
-  height: 50px;
+  /* height: 50px; */
   text-align: center;
   color: whitesmoke;
-  background: rgba(52, 58, 64, 0.5);
-  line-height: 50px;
+  background: #bd93ec  !important;
+  /* line-height: 50px; */
   z-index: 999;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+}
+#sidebar-wrapper {
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  width: 250px;
+  height: 100%;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  transform: translateX(250px);
+  background:  rgb(181 132 238 / 30%) !important;
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
