--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -132,7 +132,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-two.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-two.jpeg">
+          <img class="content-image" src="assets/images/p-two.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -143,7 +143,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-three.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-three.jpeg">
+          <img class="content-image" src="assets/images/p-three.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -154,7 +154,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-four.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-four.jpeg">
+          <img class="content-image" src="assets/images/p-four.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -165,7 +165,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-five.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-five.jpeg">
+          <img class="content-image" src="assets/images/p-five.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -176,7 +176,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-six.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-six.jpeg">
+          <img class="content-image" src="assets/images/p-six.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -187,7 +187,7 @@
       <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-three.jpeg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-three.jpeg">
+          <img class="content-image" src="assets/images/p-three.jpeg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
