--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,16 +14,22 @@
       <a class="smooth-scroll" href="#About">About</a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Services">Services</a>
+      <a class="smooth-scroll" href="#Services">What Uniqueorners Do</a>
     </li>
     <li class="sidebar-nav-item">
       <a class="smooth-scroll" href="#Portfolio">Portfolio</a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Testimonials">Testimonials</a>
+      <a class="smooth-scroll" href="#Testimonials">Users Feedback ♡</a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Contact">Contact</a>
+      <a class="smooth-scroll" href="#Contact">Feedback</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="src/app/login">Login</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="src/app/register">Register</a>
     </li>
   </ul>
 </nav>
@@ -35,7 +41,7 @@
   <div class="container content-wrap text-center">
     <h1>Uniqueorns Land</h1>
     <h3>
-        <em>A Bootstrap Theme to start building a new landing page</em>
+        <em>Creativity,Passion,Ideas.</em>
       </h3>
     <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Find Out More</a>
   </div>
@@ -50,7 +56,7 @@
         <div class="block-heading">
           <h2>About Us</h2>
         </div>
-        <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <p class="lead">Uniqueorns Land was created for those who dream big.</p>
       </div>
     </div>
   </div>
@@ -59,8 +65,7 @@
 <section id="Services" class="content-section text-center">
   <div class="container">
     <div class="block-heading">
-      <h2>What We Offer</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <h2>What Uniqueorners do</h2>
     </div>
     <div class="row">
       <div class="col-md-3 col-sm-6">
@@ -68,11 +73,11 @@
           <div class="service-icon yellow">
             <div class="front-content">
               <i class="fa fa-globe" aria-hidden="true"></i>
-              <h3>lorem ipsum</h3>
+              <h3>Create</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>lorem ipsum</h3>
+            <h3>Create</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -82,11 +87,11 @@
           <div class="service-icon orange">
             <div class="front-content">
               <i class="fa fa-suitcase"></i>
-              <h3>lorem ipsum</h3>
+              <h3>Share</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>lorem ipsum</h3>
+            <h3>Share</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -96,11 +101,11 @@
           <div class="service-icon red">
             <div class="front-content">
               <i class="fa fa-male" aria-hidden="true"></i>
-              <h3>lorem ipsum</h3>
+              <h3>Give Ideas</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>lorem ipsum</h3>
+            <h3>Give Ideas</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -110,11 +115,11 @@
           <div class="service-icon grey">
             <div class="front-content">
               <i class="fa fa-users"></i>
-              <h3>lorem ipsum</h3>
+              <h3>Socialize</h3>
             </div>
           </div>
           <div class="service-content">
-            <h3>lorem ipsum</h3>
+            <h3>Socialize</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
           </div>
         </div>
@@ -204,8 +209,8 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="block-heading">
-          <h2>Testimonials</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h2>Users Feedback ♡</h2>
+          <p>Your experience matters!</p>
         </div>
         <div id="customers-testimonials" class="owl-carousel">
           <div class="item">
@@ -252,8 +257,8 @@
 <section id="Contact" class="content-section">
   <div class="container">
     <div class="block-heading">
-      <h2>Contact Us</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <h2>Feedback</h2>
+      <p>Please let us know about your experience at Uniqueorns.</p>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-6">
@@ -286,29 +291,21 @@
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="form-wrap">
-          <form action="javascript:void(0)" method="post">
+          <form method="post" [ngClass]="{'was-validated': wasValidated}" [formGroup]="feedbackForm">
             <div class="fname floating-label">
-              <input type="text" class="floating-input" name="full name" />
-              <label for="title">First Name</label>
-            </div>
-            <div class="fname floating-label">
-              <input type="text" class="floating-input" name="full name" />
-              <label for="title">Last Name</label>
+              <input type="text" class="floating-input" name="fullName"  formControlName="fullName" required />
+              <label for="title" >Full Name</label>
             </div>
             <div class="email floating-label">
-              <input type="email" class="floating-input" name="email" />
+              <input type="email" class="floating-input" name="email"  formControlName="email" required />
               <label for="email">Email</label>
             </div>
-            <div class="contact floating-label">
-              <input type="tel" class="floating-input" name="contact" />
-              <label for="email">Mobile</label>
-            </div>
             <div class="company floating-label">
-              <textarea type="text" class="floating-input" name="company"></textarea>
+              <textarea type="text" class="floating-input" name="message"  formControlName="message" required></textarea>
               <label for="email">Message</label>
             </div>
             <div class="submit-btn">
-              <button type="submit">Submit</button>
+              <button type="submit" (click)="submit()"  [disabled]="disableButton">Submit</button>
             </div>
           </form>
         </div>
@@ -318,6 +315,6 @@
 </section>
 <footer class="footer text-center">
   <div class="container">
-    <p class="text-muted small mb-0">Copyright © Your Website 2021</p>
+    <p class="text-muted small mb-0">Copyright © Uniqueorns 22</p>
     </div>
 </footer>
