--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ body{
       box-shadow: 0 0 10px rgba(3, 17, 214, 0.164);
      }
      
-     .column{
+     /* .column{
       padding-bottom:5px;
       margin-bottom:10px; 
       font-family:georgia,garamond,serif;
@@ -78,4 +78,4 @@ body{
         background: linear-gradient(to right, #e01f1b, #e75183, #b088f7, #369ff5, #02b6ce, #50e958, #e9f83e, #ffa515, #f0592c);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-        }
+        } */
