--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,41 @@
+<a class="menu-toggle rounded" href="#">
+  <i class="fa-solid fa-bars"></i>
+</a>
+<nav id="sidebar-wrapper">
+  <ul class="sidebar-nav">
+    <li class="sidebar-brand">
+      <a class="smooth-scroll" href="#Header"></a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#page-top">Home</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#About">About</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#Services">What Uniqueorners Do</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#Portfolio">Portfolio</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#Testimonials">Users Feedback ♡</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" href="#Contact">Feedback</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll"  routerLink="/user">Posts</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll" routerLink="/login">Login</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll"  routerLink="/register">Register</a>
+    </li>
+    <li class="sidebar-nav-item">
+      <a class="smooth-scroll"  routerLink="/create-post">Create Post</a>
+    </li>
+  </ul>
+</nav>
 <router-outlet></router-outlet>
