--- a/src/app/user-posts/user-posts.component.css
+++ b/src/app/user-posts/user-posts.component.css
@@ -13,7 +13,7 @@ body {
     padding: 20px;
     font-size: 40px;
     text-align: center;
-    background: rgb(191, 211, 255);
+    /* background: rgb(191, 211, 255); */
 
   }
   
