--- a/src/assets/styles/custom-responsive-styles.css
+++ b/src/assets/styles/custom-responsive-styles.css
@@ -212,6 +212,7 @@
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background:  rgb(181 132 238 / 30%) !important;
+  background: rgb(181, 132, 238) !important;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
+  opacity: 0.9;
 }
