--- a/src/assets/styles/landing-styles.css
+++ b/src/assets/styles/landing-styles.css
@@ -60,7 +60,7 @@ span {
 #sidebar-wrapper .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: #fff;
+  color: black;
   padding: 15px;
 }
 #sidebar-wrapper .sidebar-nav li a:hover {
