changed logo,banner background+added sign in auth+

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <a class="smooth-scroll" href="#Header"></a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#page-top">Home</a>
+      <a class="smooth-scroll" routerLink="">Home</a>
     </li>
     <li class="sidebar-nav-item">
       <a class="smooth-scroll" href="#About">About</a>
