--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,9 +1,9 @@
 <!-- Header Starts -->
 <section id="Banner" class="content-section">
-  <div class="logo">
-    <img src="/assets/logou.png" alt="logo" />
-  </div>
   <div class="container content-wrap text-center">
+    <div class="logo">
+      <img src="/assets/svgs/tekbrirsh.svg" alt="logo" />
+    </div>
     <h1>Uniqueorns Land</h1>
     <h3>
         <em>Creativity,Passion,Ideas.</em>
@@ -37,7 +37,6 @@
         <div class="service-box">
           <div class="service-icon yellow">
             <div class="front-content">
-              <i class="fa fa-globe" aria-hidden="true"></i>
               <h3>Create</h3>
             </div>
           </div>
@@ -51,7 +50,6 @@
         <div class="service-box">
           <div class="service-icon orange">
             <div class="front-content">
-              <i class="fa fa-suitcase"></i>
               <h3>Share</h3>
             </div>
           </div>
@@ -65,7 +63,6 @@
         <div class="service-box ">
           <div class="service-icon red">
             <div class="front-content">
-              <i class="fa fa-male" aria-hidden="true"></i>
               <h3>Give Ideas</h3>
             </div>
           </div>
@@ -79,7 +76,6 @@
         <div class="service-box">
           <div class="service-icon grey">
             <div class="front-content">
-              <i class="fa fa-users"></i>
               <h3>Socialize</h3>
             </div>
           </div>
@@ -280,6 +276,6 @@
 </section>
 <footer class="footer text-center">
   <div class="container">
-    <p class="text-muted small mb-0">Copyright © Uniqueorns 22</p>
+    <p class="text-muted small mb-0">Copyright © Uniqueorns 2022</p>
     </div>
 </footer>
