--- a/src/assets/styles/landing-styles.css
+++ b/src/assets/styles/landing-styles.css
@@ -31,12 +31,6 @@ h1,h2,h3,h4,h5,h6 {
   text-align: center;
 }
 /* Side Menu */
-.logo {
-	position: absolute;
-	z-index: 99;
-	left: 50px;
-	top: 20px;
-}
 .logo i {
 	font-size: 50px;
 	color: #fff;
@@ -60,7 +54,7 @@ span {
 #sidebar-wrapper .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 15px;
 }
 #sidebar-wrapper .sidebar-nav li a:hover {
@@ -202,16 +196,16 @@ span {
   margin: 0;
 }
 #Services .service-box .yellow {
-  background-color: #02b3e4;
+  background-color: #80C3DD;
 }
 #Services .service-box .orange {
-  background-color: #02ccba;
+  background-color: #80C3DD;
 }
 #Services .service-box .red {
-  background-color: #02BED2;
+  background-color: #80C3DD;
 }
 #Services .service-box .grey {
-  background-color: #47c6d0;
+  background-color: #80C3DD;
 }
 #Services .service-box:hover .service-icon {
   opacity: 0;
