--- a/src/app/create-posts/create-posts.component.html
+++ b/src/app/create-posts/create-posts.component.html
@@ -6,16 +6,16 @@
 	        
     		<h1>Create post</h1>
     		
-    		<form action="" method="POST">
+    		<form [formGroup]="createpostsForm">
     		    
     		    <div class="form-group">
     		        <label for="title">Title <span class="require">*</span></label>
-    		        <input type="text" class="form-control" name="title" />
+    		        <input type="text" class="form-control" name="title" formControlName="title" required />
     		    </div>
     		    
     		    <div class="form-group">
     		        <label for="description">Description</label>
-    		        <textarea rows="5" class="form-control" name="description" ></textarea>
+    		        <textarea rows="5" class="form-control" name="description" formControlName="content" required ></textarea>
     		    </div>
     		    
     		    <div class="form-group">
@@ -25,7 +25,7 @@
                 <input type="file" id="myfile" name="myfile"><br><br>
     		    
     		    <div class="form-group">
-    		        <button type="submit" class="btn btn-primary">
+    		        <button type="submit" class="btn btn-primary" (click)="submit()"  [disabled]="disableButton">
     		            Create
     		        </button>
     		        <button class="btn btn-default">
