--- a/src/app/create-posts/create-posts.component.html
+++ b/src/app/create-posts/create-posts.component.html
@@ -22,9 +22,10 @@
     		        <p><span class="require">*</span> required fields</p>
     		    </div>
                 <label for="myfile">Select a file:</label>
-                <input type="file" id="myfile" name="myfile"><br><br>
+                <input type="file" id="myfile" name="myfile" class="form-control" formControlName="file" ><br><br>
     		    
     		    <div class="form-group">
+					<app-file-upload formControlName="image"></app-file-upload>
     		        <button type="submit" class="btn btn-primary" (click)="submit()"  [disabled]="disableButton">
     		            Create
     		        </button>
