added Router nav+motivational quotes

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -21,7 +21,9 @@
         <div class="block-heading">
           <h2>About Us</h2>
         </div>
-        <p class="lead">Uniqueorns Land was created for those who dream big.</p>
+        <p class="lead">We are all very different.Born in different cities,different times,different dreams.
+          We are all Unique in our own way but what unites us all are the dreams and the motivation to go pursue them.  
+        </p>
       </div>
     </div>
   </div>
@@ -42,7 +44,7 @@
           </div>
           <div class="service-content">
             <h3>Create</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+            <p>Create a one of a kind community</p>
           </div>
         </div>
       </div>
@@ -55,7 +57,7 @@
           </div>
           <div class="service-content">
             <h3>Share</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+            <p>Share your experience,thoughts and ideas with fellow uniqueorners</p>
           </div>
         </div>
       </div>
@@ -68,7 +70,7 @@
           </div>
           <div class="service-content">
             <h3>Give Ideas</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+            <p>Express your thoughts in a certain topic.</p>
           </div>
         </div>
       </div>
@@ -81,7 +83,7 @@
           </div>
           <div class="service-content">
             <h3>Socialize</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
+            <p>Find new friends and people with the same purpose as you. </p>
           </div>
         </div>
       </div>
@@ -91,14 +93,14 @@
 <section class="content-section text-center" id="Portfolio">
   <div class="container">
     <div class="block-heading">
-      <h2>Portfolio</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <h2>~Motivation~</h2>
+      <p>What we stand by.</p>
     </div>
     <div class="portfolio-wrapper clearfix">
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-two.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/abraham.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-two.jpeg" alt="">
+          <img class="content-image" src="assets/images/abraham.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -106,10 +108,10 @@
           </div>
         </div>
       </a>
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-three.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/gentle.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-three.jpeg" alt="">
+          <img class="content-image" src="assets/images/gentle.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -117,10 +119,10 @@
           </div>
         </div>
       </a>
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-four.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/minds.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-four.jpeg" alt="">
+          <img class="content-image" src="assets/images/minds.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -128,10 +130,10 @@
           </div>
         </div>
       </a>
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-five.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/steve.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-five.jpeg" alt="">
+          <img class="content-image" src="assets/images/steve.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -139,10 +141,10 @@
           </div>
         </div>
       </a>
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-six.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/disney.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-six.jpeg" alt="">
+          <img class="content-image" src="assets/images/disney.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -150,10 +152,10 @@
           </div>
         </div>
       </a>
-      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/p-three.jpeg">
+      <a class="each-portfolio" data-fancybox="gallery" href="assets/images/eraser.jpg">
         <div class="content hover-cont-wrap">
           <div class="content-overlay"></div>
-          <img class="content-image" src="assets/images/p-three.jpeg" alt="">
+          <img class="content-image" src="assets/images/eraser.jpg" alt="">
           <div class="content-details fadeIn-bottom">
             <h5 class="p-title">Title</h5>
             <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
