--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -5,16 +5,15 @@
           <div class="card-body">
             <p class="card-text"> 
           </div>  
-          <form class="column" [ngClass]="{'was-validated': wasValidated}" [formGroup]="loginForm"  (ngSubmit)="onSubmit()">
+          <form class="column" [ngClass]="{'was-validated': wasValidated}" [formGroup]="loginForm" >
             <div class="col-md-12 mb-3">
-              <label  class="form-label">Username</label>
-              <input type="text" class="form-control"  formControlName="username" required>
+              <label  class="form-label">Email</label>
+              <input type="email" class="form-control"  formControlName="email" required>
             </div>
-            <!-- <div  >
-              <div *ngIf="loginForm.controls['username'].errors" class="error-msg">
-                Please enter username
-              </div>
-            </div> -->
+             <div  >
+             <span class="error-msg" *ngIf="!loginForm.controls['email'].valid && 
+                 loginForm.controls['email']?.touched"> Please enter a valid email address</span>
+            </div> 
             <div class="col-md-12 mb-3">
               <label  class="form-label">Password</label>
               <input type="password" class="form-control" formControlName="password" required>
