made some  small changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <a class="smooth-scroll" href="#Services">What Uniqueorners Do</a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Portfolio">Portfolio</a>
+      <a class="smooth-scroll" href="#Portfolio">Motivate Yourself</a>
     </li>
     <li class="sidebar-nav-item">
       <a class="smooth-scroll" href="#Testimonials">Users Feedback ♡</a>
