--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -229,25 +229,25 @@
           <div class="address-block border-bottom">
             <h3 class="add-title">Headquaters</h3>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info"> Street Addess</span>
+              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info">Unicorns street</span>
             </div>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+0000000000</span>
+              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+16034134124</span>
             </div>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">email@yourdomain.com</span>
+              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">unicorns@unicorns.com</span>
             </div>
           </div>
           <div class="address-block">
             <h3 class="add-title">Branch</h3>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info"> 985698 Street</span>
+              <span class="c-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span><span class="c-info"> Uniqueorns Street</span>
             </div>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+0000000000</span>
+              <span class="c-icon"><i class="fa fa-phone" aria-hidden="true"></i></span><span class="c-info">+6054756964</span>
             </div>
             <div class="c-detail">
-              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">email@yourdomain.com</span>
+              <span class="c-icon"><i class="fa fa-envelope" aria-hidden="true"></i></span><span class="c-info">unicorns@unicorns.com</span>
             </div>
           </div>
         </div>
