stored users feedbacks on firebase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       <a class="smooth-scroll" href="#Portfolio">Motivate Yourself</a>
     </li>
     <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Testimonials">Users Feedback ♡</a>
+      <a class="smooth-scroll" routerLink="/feedbacks">Users Feedback ♡</a>
     </li>
     <li class="sidebar-nav-item">
       <a class="smooth-scroll" href="#Contact">Feedback</a>
