--- a/src/app/user-posts/user-posts.component.html
+++ b/src/app/user-posts/user-posts.component.html
@@ -72,7 +72,7 @@
                 <div class="card mb-2" *ngFor="let post of posts">
                     <div class="card-body p-2 p-sm-3">
                         <div class="media forum-item">
-                            <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                            <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="assets/svgs/rreth.svg" class="mr-3 rounded-circle" width="50" alt="User" /></a>
                             <div class="media-body">
                                 <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{post.title}}</a></h6>
                                 <p class="text-secondary">
