--- a/src/app/users-feedback/users-feedback.component.css
+++ b/src/app/users-feedback/users-feedback.component.css
@@ -1,100 +1,89 @@
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700&display=swap');
 
-#customers-testimonials .shadow-effect {
-  background: #fff;
-  padding: 20px;
-  border-radius: 4px;
-  text-align: center;
-  border: 1px solid #ECECEC;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.10), 0 15px 12px rgba(0, 0, 0, 0.02);
-}
-#Testimonials.content-section {
-  padding-bottom: 0;
-  background-color: #fafafa;
-}
-#customers-testimonials .shadow-effect p {
-  font-family: inherit;
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 0 0 17px 0;
-  font-weight: 300;
-}
-#customers-testimonials .testimonial-name {
-  margin: -42px auto 0;
-  display: table;
-  width: auto;
-  background-color: #02ccba;
-  color: #fff;
-  padding: 9px 35px;
-  border-radius: 12px;
-  text-align: center;
-  color: #fff;
-}
-#customers-testimonials .item {
-  text-align: center;
-  padding: 50px;
-  margin-bottom: 80px;
-  -webkit-transform: scale3d(0.8, 0.8, 1);
-  transform: scale3d(0.8, 0.8, 1);
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-#customers-testimonials .owl-item.active.center .item {
-  -webkit-transform: scale3d(1.0, 1.0, 1);
-  transform: scale3d(1.0, 1.0, 1);
-}
-.owl-carousel .owl-item img {
-  transform-style: preserve-3d;
-  max-width: 90px;
-  margin: 0 auto 17px;
-}
-#customers-testimonials.owl-carousel.owl-theme .owl-dots .owl-dot.active span,
-#customers-testimonials.owl-carousel.owl-theme .owl-dots .owl-dot:hover span {
-  background: #28CB75;
-  transform: translate3d(0px, -50%, 0px) scale(0.7);
-}
+ body {
+    margin: 0;
+    height: calc(100vh - 8em);
+    font-family: 'Muli', sans-serif;
+    background-color: #f5f5f5;
+} 
 
-#customers-testimonials.owl-carousel.owl-theme .owl-dots .owl-dot span {
-  background: #C4C4CC;
-  display: block;
-  height: 20px;
-  margin: 0 2px 5px;
-  transform: translate3d(0px, -50%, 0px) scale(0.3);
-  transform-origin: 50% 50% 0;
-  transition: all 250ms ease-out 0s;
-  width: 20px;
-}
-.owl-nav {
-	display: block !important; 
-}
-.owl-prev span, .owl-next span {
-	display: none;
-}
-.owl-prev {
-	width: 30px;
-	height: 30px;
-	background: url('/assets/left.png') no-repeat 0 0 / cover !important;
-	float: left;
-	position: absolute;
-	top: 35%;
-	left: 10px;
-}
-.owl-next {
-	width: 30px;
-	height: 30px;
-	background: url('/assets/right.png') no-repeat 0 0 / cover !important;
-	float: right;
-	position: absolute;
-	top: 35%;
-	right: 10px;
-}
-.owl-prev:focus, .owl-next:focus {
-	outline: 0;
-	border: 0;
+ h1 {
+    text-align: center;
+    margin: 2em;
+} 
 
-}
-.content-section {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-.owl-carousel,.owl-carousel .owl-item{-webkit-tap-highlight-color:transparent;position:relative}.owl-carousel{display:none;width:100%;z-index:1}.owl-carousel .owl-stage{position:relative;-ms-touch-action:pan-Y;touch-action:manipulation;-moz-backface-visibility:hidden}.owl-carousel .owl-stage:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.owl-carousel .owl-stage-outer{position:relative;overflow:hidden;-webkit-transform:translate3d(0,0,0)}.owl-carousel .owl-item,.owl-carousel .owl-wrapper{-webkit-backface-visibility:hidden;-moz-backface-visibility:hidden;-ms-backface-visibility:hidden;-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0)}.owl-carousel .owl-item{min-height:1px;float:left;-webkit-backface-visibility:hidden;-webkit-touch-callout:none}.owl-carousel .owl-item img{display:block;width:100%}.owl-carousel .owl-dots.disabled,.owl-carousel .owl-nav.disabled{display:none}.no-js .owl-carousel,.owl-carousel.owl-loaded{display:block}.owl-carousel .owl-dot,.owl-carousel .owl-nav .owl-next,.owl-carousel .owl-nav .owl-prev{cursor:pointer;cursor:hand;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel .owl-nav button.owl-next,.owl-carousel .owl-nav button.owl-prev,.owl-carousel button.owl-dot{background:0 0;color:inherit;border:none;padding:0!important;font:inherit}.owl-carousel.owl-loading{opacity:0;display:block}.owl-carousel.owl-hidden{opacity:0}.owl-carousel.owl-refresh .owl-item{visibility:hidden}.owl-carousel.owl-drag .owl-item{-ms-touch-action:none;touch-action:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.owl-carousel.owl-grab{cursor:move;cursor:grab}.owl-carousel.owl-rtl{direction:rtl}.owl-carousel.owl-rtl .owl-item{float:right}.owl-carousel .animated{animation-duration:1s;animation-fill-mode:both}.owl-carousel .owl-animated-in{z-index:0}.owl-carousel .owl-animated-out{z-index:1}.owl-carousel .fadeOut{animation-name:fadeOut}@keyframes fadeOut{0%{opacity:1}100%{opacity:0}}.owl-height{transition:height .5s ease-in-out}.owl-carousel .owl-item .owl-lazy{opacity:0;transition:opacity .4s ease}.owl-carousel .owl-item img.owl-lazy{transform-style:preserve-3d}.owl-carousel .owl-video-wrapper{position:relative;height:100%;background:#000}.owl-carousel .owl-video-play-icon{position:absolute;height:80px;width:80px;left:50%;top:50%;margin-left:-40px;margin-top:-40px;background:url(/asseowl-video-play.png) no-repeat;cursor:pointer;z-index:1;-webkit-backface-visibility:hidden;transition:transform .1s ease}.owl-carousel .owl-video-play-icon:hover{-ms-transform:scale(1.3,1.3);transform:scale(1.3,1.3)}.owl-carousel .owl-video-playing .owl-video-play-icon,.owl-carousel .owl-video-playing .owl-video-tn{display:none}.owl-carousel .owl-video-tn{opacity:0;height:100%;background-position:center center;background-repeat:no-repeat;background-size:contain;transition:opacity .4s ease}.owl-carousel .owl-video-frame{position:relative;z-index:1;height:100%;width:100%}
+.container {
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    
+  }
+  .container .items {
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    animation: carouselAnim 60s infinite alternate linear;
+  }
+  .container .items .entry {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    width: 300px;
+    background: white;
+    margin: 1em;
+    padding: 0.5em;
+    border-radius: 10px;
+    box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.05);
+  }
+  .container .items .entry img {
+    border-radius: 100%;
+    max-width: 80px;
+  }
+  .container .items .entry p {
+    text-align: center;
+    padding: 1em;
+    text-overflow: ellipsis;
+    max-width: 200px;
+  }
+  .container .items .entry p.name {
+    font-weight: bold;
+  }
+  @keyframes carouselAnim {
+    from {
+      transform: translate(0, 0);
+    }
+    to {
+      transform: translate(calc(-100% + (5*300px)));
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .container .items {
+      animation: carouselAnim 30s infinite alternate linear;
+    }
+    @keyframes carouselAnim {
+      from {
+        transform: translate(0, 0);
+      }
+      to {
+        transform: translate(calc(-100% + (2*300px)));
+      }
+    }
+  }
+  .container .faders {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+  }
+  .container .faders .left, .container .faders .right {
+    background: linear-gradient(to right, #f1dbf3 0%, rgba(255, 255, 255, 0) 100%);
+    width: 20%;
+    height: 100%;
+    position: absolute;
+    z-index: 200;
+  }
+  .container .faders .right {
+    right: 0;
+    background: linear-gradient(to left, #ced8f3 0%, rgba(255, 255, 255, 0) 100%);
+  }
+  
